; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/ld/extr_ldmain.c_remove_output.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/ld/extr_ldmain.c_remove_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@output_filename = common dso_local global i64 0, align 8
@output_bfd = common dso_local global i64 0, align 8
@delete_output_file_on_failure = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @remove_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @remove_output() #0 {
  %1 = load i64, i64* @output_filename, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %16

3:                                                ; preds = %0
  %4 = load i64, i64* @output_bfd, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %3
  %7 = load i64, i64* @output_bfd, align 8
  %8 = call i32 @bfd_cache_close(i64 %7)
  br label %9

9:                                                ; preds = %6, %3
  %10 = load i64, i64* @delete_output_file_on_failure, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i64, i64* @output_filename, align 8
  %14 = call i32 @unlink_if_ordinary(i64 %13)
  br label %15

15:                                               ; preds = %12, %9
  br label %16

16:                                               ; preds = %15, %0
  ret void
}

declare dso_local i32 @bfd_cache_close(i64) #1

declare dso_local i32 @unlink_if_ordinary(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
